alignment corrections v2

--- a/style/agent-locator-section-style.css
+++ b/style/agent-locator-section-style.css
@@ -1,3 +1,7 @@
+.agent-loactor-section {
+  width: 75%;
+}
+
 .agent-locator-section p {
   width: 75%;
   margin: 0 auto;
@@ -10,6 +14,14 @@
   padding-bottom: 100px;
 }
 
+@media only screen and (max-width: 1280px) {
+
+  .agent-locator-section p {
+    width: 60%;
+  }
+  
+}
+
 @media only screen and (max-width: 600px) {
 
   .agent-locator-section p {
@@ -17,3 +29,4 @@
   }
   
 }
+
